Revise results and conclusions

--- a/Interim/interim.bib
+++ b/Interim/interim.bib
@@ -148,7 +148,7 @@
 @inproceedings{pearce_towards_2001,
 	title = {Towards {A} {Framework} for the {Evaluation} of {Machine} {Compositions}},
 	url = {https://www.semanticscholar.org/paper/Towards-A-Framework-for-the-Evaluation-of-Machine-Pearce-Wiggins/c1cb675ecddaf28f2c241921bb16399a1a9e19c9?sort=is-influential},
-	abstract = {We outline a framework within which machine compositions may be evaluated objectively. In particular, the framework allows statements about those compositions to be refuted on the basis of empirical experimentation. We consider this to be fundamental if we wish to evaluate the degree to which our programs achieve their compositional aims. Furthermore, a review of the literature reveals that this is a largely ignored aspect of research into algorithmic composition. Our framework involves four components: specifying the compositional aims; inducing a critic from a set of example musical phrases; composing music that satisfies the critic; and evaluating specific claims about the compositions in experiments using human subjects. We describe a system which exemplifies these four stages and which demonstrates the practicality of the framework. Finally, the application of the framework to the evaluation of musical creativity is discussed and directions for future research are suggested.},
+	booktitle = {{Proceedings} of the {AISB}'01 {Symposium} on {Artificial} {Intelligence} and {Creativity} in the {Arts} and {Sciences}},
 	urldate = {2024-11-25},
 	author = {Pearce, M. and Wiggins, Geraint A.},
 	year = {2001},
